Traps and IA Improvement
- Enemies have Patrol mode and it can be turned ON/OFF from the inspector and PatrolPoints can be added there.

- Modifications on the enemies structure (separating body physics from the rest).

- Added an ArrowDispenser to test projectiles.

- Added a trap that walks throught walls.

All of the above implementations have a prefab for use/study purposes.

- Improved the wallJump detection so the player wont be able to wallJump in very small walls.

PT:

- O modo de patrulha dos inimigos agora pode ser ligado/desligador pelo inspector e patrolPoints podem ser adicionados.

- Modificações na estrutura dos inimigos (separado a fisica dos corpos do resto).

- Adicionado uma armadilha de flechas pra testar projéteis.

- Adicionado uma armadilha que caminha nas paredes.

Todas as implementações acima tem um respectivo prefab para uso/testes.

- Melhoras na detecção do wallJump para que o player não possa usá-lo em paredes muito pequenas.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -56,5 +56,31 @@
         "temp/": true,
         "Temp/": true
     },
-    "dotnet.defaultSolution": "Vampire-Ninja-Ameizing-Games.sln"
+    "dotnet.defaultSolution": "Vampire-Ninja-Ameizing-Games.sln",
+    "git.autorefresh": false,
+    "git.autoRepositoryDetection": false,
+    "git.confirmEmptyCommits": false,
+    "git.confirmForcePush": false,
+    "git.confirmNoVerifyCommit": false,
+    "git.confirmSync": false,
+    "github.branchProtection": false,
+    "github.gitAuthentication": false,
+    "git.useForcePushWithLease": false,
+    "git.useIntegratedAskPass": false,
+    "git.useForcePushIfIncludes": false,
+    "git.useEditorAsCommitInput": false,
+    "git.timeline.showAuthor": false,
+    "git.suggestSmartCommit": false,
+    "git.terminalAuthentication": false,
+    "git.showProgress": false,
+    "git.showCommitInput": false,
+    "git.showInlineOpenFileAction": false,
+    "git.showActionButton": {
+      "commit": false,
+      "publish": false,
+      "sync": false
+    },
+    "git.requireGitUserConfig": false,
+    "git.optimisticUpdate": false,
+    "git.detectSubmodules": false
 }
